# sparklemotion

./: .gitignore  Makefile  README.md  _sparkle.c  demo.c  pru.c  prucode.asm  prucode.p  setup.py  sparkle.asm  sparkle.c  sparkle.dts  sparkle.h  sparkle.py  xmastree.dts
motion/: motion.py
motion/static/: index.html  motion.js
motion/static/css/ui-lightness/: jquery-ui-1.10.3.custom.css  jquery-ui-1.10.3.custom.min.css
motion/static/js/: jquery-ui-1.10.3.custom.js  jquery-ui-1.10.3.custom.min.js
sparkle/: .gitignore  Makefile  acinclude.m4  configure.ac  demo.c  fern.c  fern2  fern2.c  random.c  sparkle.asm  sparkle.c  sparkle.dts  xmas2.c
sparkle/include/: Makefile.am
sparkle/m4/: .gitignore
sparkle/src/: .gitignore  Makefile.am  demo.c
